--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\Peiran Quan\\AppData\\Local\\Programs\\Python\\Python37\\python.exe"
+    "python.pythonPath": "D:\\Anaconda\\python.exe"
 }
