--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "D:\\Anaconda\\python.exe"
+    "python.pythonPath": "c:\\Users\\Peiran Quan\\Desktop\\Machine Learning\\machine_learning_env\\Scripts\\python.exe"
 }
